config file updated

--- a/lineq.cfg
+++ b/lineq.cfg
@@ -3,16 +3,18 @@
     "web_host" : "localhost",
     "tcp_port" : "11111",
     "web_port" : "8060",
-    "service_name" : "lineQ",
+    "target_port" : "443",
     "service_mode" : "vwr",
     "vwr_room_table" : "room",
     "vwr_inactivity_duration" : 5,
-    "base": {
-      "vwr_active_users": 20,
-      "path": "/"
-    },
-    "/test": {
-      "vwr_active_users": 20,
-      "path": "/test"
+    "routes": {
+      "base": {
+        "vwr_active_users": 20,
+        "path": "/"
+      },
+      "test": {
+        "vwr_active_users": 20,
+        "path": "/test"
+      }
     }
 }
