dynamic routes implemented

--- a/lineq.cfg
+++ b/lineq.cfg
@@ -6,15 +6,18 @@
     "target_port" : "443",
     "service_mode" : "vwr",
     "vwr_room_table" : "room",
-    "vwr_inactivity_duration" : 5,
+    "vwr_session_duration": 5,
+    "vwr_user_table" : "user",
     "routes": {
       "base": {
         "vwr_active_users": 20,
-        "path": "/"
+        "path": "/",
+        "host": "example.com"
       },
       "test": {
         "vwr_active_users": 20,
-        "path": "/test"
+        "path": "/test",
+        "host": "example.com"
       }
     }
 }
